--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,10 @@ body{
     background-color: #1abc9c;
     padding: 10px;
 }
+#wrapper #header a{
+    float: right;
+    font-size: 50px;
+}
 
 #header h1{
     color: #fff;
@@ -179,3 +183,9 @@ body{
 #main-content .pagination li a:hover{
     background-color: #333;
 }
+/* #logout_div #login{
+    font-size: 30px;
+
+    float: right;
+   
+} */
