--- a/css/login.css
+++ b/css/login.css
@@ -4,25 +4,80 @@
     box-sizing: border-box;
 }
 body{
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(102, 120, 131);
+    width: 100%;
+    height: auto;
+    /* background:radial-gradient(rgb(236, 17, 236) ,rgba(72, 247, 203, 0.932)); */
+    /* background: linear-gradient(rgb(0, 247, 255),url(./nature.jpg)); */
+    background-image:url(images/nature.jpg);
+}
+.container{
+
+     width: 100vw;                       /* VW = VewPoart width */
+     height: 100vh;
+      background-color:(rgba(248, 4, 4, 0.473));
+
+
+    display: grid;
+    place-items:center;
+
+  
 
 }
-.navbar-brand,.navbar-nav{
-    color: rgb(248, 66, 151);
-    padding: 0 10px;
-}
-.navbar .container-fluid{
-    background-color: rgb(95, 255, 228);
-}
-#btn-div{
-   position: center;
-    width: 300px;
-}
-#btn-div .btn-login,.btn-singup{
-    background-color: rgb(255, 13, 13);
-    padding: 6px 18px;
-    margin: 6px 6px;
-  
-}
+
+.form-div{
+    background-image:linear-gradient(rgba(17, 192, 236, 0.377) ,rgba(233, 51, 178, 0.377)), url(images/laptop.jpg);
+    background-size: 100% 100%;
+    box-shadow: 5px 10px 20px -5px #000;
+    width: 50vw;
+    height: 90vh;
+
+    
+    display: grid;
+    place-items:center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 30px;
+
+    } 
+    .form-div input{
+        width: 40vw;
+        height: 3em;
+        border-radius: 10px;
+        border: none;
+        font-size: 20px;
+        padding: 0 10px;
+        background-color: rgb(255, 255, 255);
+
+    }
+     input:hover{
+        background-color: rgb(255, 255, 255);
+        transition: .3 all ease;    
+     }
+    #btn-style #submit{
+        width: 40vw;
+        height:2.3em;
+        color: white;
+        font-size: 30px;
+        margin-top: 6%;
+        margin-bottom: 10%;
+        border-radius: 10px;
+        border: none;
+        background-color:rgb(48, 194, 19);
+           
+    }
+    #btn-style #submit:hover{
+        background-color: rgb(7, 250, 35);
+        transition: .3 all ease;    
+     }
+/*      
+    @media(max-width: 768px){
+        .form-div{
+             background-image:
+        linear-gradient(-33deg, rgba(210, 54, 241, 0.685));
+         background-color: rgb(240, 23, 23);
+        }
+       
+    
+    }  
+
+     */
+
