--- a/css/login.css
+++ b/css/login.css
@@ -14,8 +14,6 @@ body{
 
      width: 100vw;                       /* VW = VewPoart width */
      height: 100vh;
-      background-color:(rgba(248, 4, 4, 0.473));
-
 
     display: grid;
     place-items:center;
@@ -29,7 +27,7 @@ body{
     background-size: 100% 100%;
     box-shadow: 5px 10px 20px -5px #000;
     width: 50vw;
-    height: 90vh;
+    height: 85vh;
 
     
     display: grid;
@@ -38,13 +36,21 @@ body{
     font-size: 30px;
 
     } 
+    .btn_div{
+        float: left;
+        margin-top: -20px;
+        width: 50vw;
+        height:1em;
+        
+    }
     .btn_back{
-        background-color: #ffffffbb;
+        background-color: #98f8e8ee;
         font-size:25px;
         font-weight: bold;
-        height: 2em;
+        height: 1.5em;
         padding: 2px 10px;
-        float: left;
+       
+        
         
     }
     .btn_back a{
