--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+/* header page start here */
+
 *{
     margin: 0;
     padding: 0;
@@ -18,46 +20,57 @@ body{
 
 #wrapper{
     width: 90vw;
-    margin: 50px auto 0;
-    background-color: rgb(158, 148, 148);
+    margin: 10px auto;
+    background-color: rgb(245, 140, 255);
+
 }
 .btn-div{
-    background-color: #1abc9c;
     padding: 0 10px;
+    background-color: rgb(156, 1, 1);
+
 }
 .btn-logout{
     font-size: 20px;
     font-weight: bold;
    
     height: 2em;
-    background-color: #ffffffbb;
+    background-color: #ffffffef;
     padding: 2px 5px;
-   
+    border-radius: 8px;
+    
 
 }
 .btn-logout a{
     text-decoration: none;
-     color: red;
+     color:red;
+    text-shadow: 1.2px 1.2px red;
+
 }
 .btn-admin{
     font-size: 20px;
     font-weight: bold;
     color: red;
     float: right;
-    height: 2em;
-    background-color: #ffffffbb;
+    height: 2.3em;
+    background-color: #ffffffef;
     text-decoration: none;
-    padding:5px;
+    padding:2px 5px;
+    border-radius: 8px;
+
 }
 .btn-admin a{
     text-decoration: none;
      color: red;
+    text-shadow: 1.2px 1.2px red;
+
 }
 
 #header{
     text-align: center;
     background-color: #1abc9c;
     padding: 10px;
+    background-color:rgb(156, 1, 1);
+
 }
 
 #header h1{
@@ -71,10 +84,11 @@ body{
 
 #menu{
     overflow: hidden;
-    background-color: rgb(221, 54, 132);
+    background-color: #02178f;
+
 }
 #menu ul{
-    font-size: 30;
+    font-size: 35px;
     padding: 0 15px;
     margin: 0;
     list-style: none;
@@ -94,6 +108,10 @@ body{
 #menu ul li a:hover{
     background-color: rgb(196, 42, 75);
 }
+
+/* header page start here */
+
+
 
 /* index page start here */
 
