--- a/css/login.css
+++ b/css/login.css
@@ -8,7 +8,7 @@ body{
     height: auto;
     /* background:radial-gradient(rgb(236, 17, 236) ,rgba(72, 247, 203, 0.932)); */
     /* background: linear-gradient(rgb(0, 247, 255),url(./nature.jpg)); */
-    background-image:url(images/nature.png);
+    background-image:url(images/nature.jpg);
 }
 .container{
 
@@ -44,18 +44,20 @@ body{
         
     }
     .btn_back{
-        background-color: #98f8e8ee;
+        background-color: #f3ddddef;
         font-size:25px;
         font-weight: bold;
         height: 1.5em;
         padding: 2px 10px;
+        border-radius: 5px;
        
-        
         
     }
     .btn_back a{
         text-decoration: none;
         color: red;
+        text-shadow: 1.2px 1.2px red;
+
         
 
     } 
