--- a/css/login.css
+++ b/css/login.css
@@ -29,50 +29,37 @@ body{
     width: 50vw;
     height: 85vh;
 
-    
+    font-family:'Times New Roman', Times, serif;
     display: grid;
     place-items:center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 30px;
-
+    color: rgb(27, 26, 26);
+    font-weight: 800;
+    
     } 
+    .form-div h1{
+    font-family:Arial, Helvetica, sans-serif;
+
+        color: rgb(189, 4, 97);
+        font-weight: 800;
+    }
+    .form-div label{
+        font-family:Arial, Helvetica, sans-serif;
+        text-shadow:1px 1px white;
+        font-size: 30px;
+        color: rgb(78, 21, 21);
+    }
     .btn_div{
         float: left;
         margin-top: 0;
         width: 50vw;
         height:1em;
-        
+        display: flex;
+        align-items: center;   
     }
-    .btn_back{
-        background-color: #f3ddddef;
-        font-size:25px;
-        font-weight: bold;
-        height: 1.5em;
-        padding: 2px 10px;
-        border-radius: 5px;
-       
+    .btn_div h1{
+        margin: 0 9.5rem;
         
-    }
-    .btn_back a{
-        text-decoration: none;
-        color: red;
-        text-shadow: 1.2px 1.2px red;
-
-        
-
-    } 
-    .error span{
-          font-family: 'Times New Roman', Times, serif;
-          font-weight: bold;
-          color: red; 
-          text-shadow: 1PX 1PX red; 
-
-    }
-    .success span{
-        font-family: 'Times New Roman', Times, serif;
-        font-weight: bold;
-        color: rgb(0, 255, 0); 
-        text-shadow: 1PX 1PX rgb(0, 255, 0); 
     }
     .form-div input{
         width: 40vw;
@@ -81,7 +68,7 @@ body{
         border: none;
         font-size: 20px;
         padding: 0 10px;
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(224, 241, 224);
 
     }
      input:hover{
@@ -102,8 +89,43 @@ body{
     }
     #btn-style #submit:hover{
         background-color: rgb(7, 250, 35);
+        transition: 1 all ease;    
+     }
+     
+    .btn_back{
+        background-color: #f3ddddef;
+        font-size:25px;
+        font-weight: bold;
+        height: 1.5em;
+        padding: 2px 10px;
+        border-radius: 5px;
+        display: block;
+        
+    }
+    .btn_back a{
+        text-decoration: none;
+        color: red;
+        text-shadow: 1.2px 1.2px red;
+
+    } 
+    #btn-style .btn_back:hover{
+        background-color: rgb(248, 151, 151);
         transition: .3 all ease;    
      }
+     
+    .error span{
+          font-family: 'Times New Roman', Times, serif;
+          font-weight: bold;
+          color: red; 
+          text-shadow: 1PX 1PX red; 
+
+    }
+    .success span{
+        font-family: 'Times New Roman', Times, serif;
+        font-weight: bold;
+        color: rgb(0, 255, 0); 
+        text-shadow: 1PX 1PX rgb(0, 255, 0); 
+    }
 /*      
     @media(max-width: 768px){
         .form-div{
