--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,7 @@ body{
 /* index page start here */
 
 #main-content{
-     padding: 25px;
+     padding-left: 50px;
     min-height: 400px;
 }
 #main-content h2{
