--- a/css/login.css
+++ b/css/login.css
@@ -110,25 +110,7 @@ body{
     } 
     #btn-style .btn_back:hover{
         background-color: rgb(248, 151, 151);
-        transition: .3 all ease;    
-     }
-     
-    .error span{
-          font-family: 'Times New Roman', Times, serif;
-          font-weight: bold;
-          color: red; 
-          text-shadow: 1PX 1PX red; 
-
-    }
-    .success span{
-        font-family: 'Times New Roman', Times, serif;
-        font-weight: bold;
-        color: rgb(0, 255, 0); 
-        text-shadow: 1PX 1PX rgb(0, 255, 0); 
-    }
-/*      
-    @media(max-width: 768px){
-        .form-div{
+        transition: 
              background-image:
         linear-gradient(-33deg, rgba(210, 54, 241, 0.685));
          background-color: rgb(240, 23, 23);
