--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ body{
 
 #header h1{
     color: rgb(207, 205, 205);
-    font-size: 2.6em;
+    font-size: 3em;
     
     font-weight: 700;
     text-transform: uppercase;
@@ -107,7 +107,7 @@ body{
 
 #menu ul li a{
     color: rgb(207, 205, 205);
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: bold;
     padding: 1rem 20px;
     text-decoration: none;
@@ -130,7 +130,7 @@ body{
 
 #menu .btn-div p a{
     color: rgb(207, 205, 205);
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: bold;
     padding: 1rem 20px;
     text-decoration: none;
@@ -159,8 +159,9 @@ body{
 /* index page start here */
 
 #main-content{
-     padding-left: 65px;
-    min-height: 400px;
+    margin:10px;
+    min-height: 500px;
+    font-size:18px;
 }
 #main-content h2{
     margin: 0 0 10px;
@@ -168,7 +169,7 @@ body{
 }
 
 #main-content table{
-    width: 85vw;
+    width: 100vw;
     background-color: #555;
     margin: 0 0 20px;
 }
